# pleaseprint

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
templates/: index.html  queue.html
